--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>br.com.alura</groupId>
-  <artifactId>maven-testing</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>maven-testing</name>
-  <description>Maven Testing</description>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>br.com.alura</groupId>
+	<artifactId>maven-testing</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>maven-testing</name>
+	<description>Maven Testing</description>
+	<dependencies>
+		<dependency>
+			<groupId>br.com.caelum.stella</groupId>
+			<artifactId>caelum-stella-core</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+	</dependencies>
 </project>
